RT5X firmware links

--- a/5x.md
+++ b/5x.md
@@ -48,7 +48,7 @@ Big thanks to [RetroRGB](https://www.retrorgb.com/how-to-update-your-retrotinks-
 <br/>
 
 ## Version 3.71 (2023-10-09)
-### Download link to be added
+### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-5X%20Pro/Release/rt5x_371.zip)
 CRC-32: `1E42A5D4`  
 SHA-256: `aa70d0414589040ceac9eac4f6a5a59936a38abff39cca01f3b153cc0402bd80`
 
@@ -58,7 +58,7 @@ SHA-256: `aa70d0414589040ceac9eac4f6a5a59936a38abff39cca01f3b153cc0402bd80`
 <br/>
 
 ## Version 3.7 (2023-09-08)
-### Download link to be added
+### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-5X%20Pro/Release/rt5x_37.zip)
 CRC-32: `634473C4`  
 SHA-256: `8bc8cbee2ddb1cd38a5186f0bb150352602e78439d904c98f0e6349a1bd8f49d`
 
@@ -73,7 +73,7 @@ SHA-256: `8bc8cbee2ddb1cd38a5186f0bb150352602e78439d904c98f0e6349a1bd8f49d`
 <br/>
 
 ## Version 3.0 (2022-12-23)
-### Download link to be added
+### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-5X%20Pro/Release/rt5x_30.zip)
 CRC-32: `1FC97375`  
 SHA-256: `a726b175b9e8d8d1abfe96e23834e955009007e4fe749a05ad1dc83f964e5822`
 
@@ -91,7 +91,7 @@ SHA-256: `a726b175b9e8d8d1abfe96e23834e955009007e4fe749a05ad1dc83f964e5822`
 <br/>
 
 ## Version 2.77 (2022-09-26)
-### Download link to be added
+### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-5X%20Pro/Release/rt5x_277.zip)
 CRC-32: `B01E84F8`  
 SHA-256: `2e4f39cb0614b6b03739b9f9c932ce690c726b3db8966e7193a7fc96be05ee83`
 
@@ -102,7 +102,7 @@ SHA-256: `2e4f39cb0614b6b03739b9f9c932ce690c726b3db8966e7193a7fc96be05ee83`
 <br/>
 
 ## Version 2.76 (2022-08-07)
-### Download link to be added
+### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-5X%20Pro/Release/rt5x_276.zip)
 CRC-32: `AFB5DF46`  
 SHA-256: `04f980d906fa5dace64eb696b194c57589869543f3609a552d15cde78dd14d0a`
 
@@ -114,7 +114,7 @@ SHA-256: `04f980d906fa5dace64eb696b194c57589869543f3609a552d15cde78dd14d0a`
 <br/>
 
 ## Version 2.75 (2022-08-02)
-### Download link to be added
+### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-5X%20Pro/Release/rt5x_275.zip)
 CRC-32: `8AF02841`  
 SHA-256: `dea1fd52ec22dd78a4d2aea60bed8c24d550bb13f911f4823132ad7a15daa982`
 
@@ -125,7 +125,7 @@ SHA-256: `dea1fd52ec22dd78a4d2aea60bed8c24d550bb13f911f4823132ad7a15daa982`
 <br/>
 
 ## Version 2.74 (2022-07-30)
-### Download link to be added
+### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-5X%20Pro/Release/rt5x_274.zip)
 CRC-32: `BBACD719`  
 SHA-256: `cb14714b25299edc449d64a5742ec49ea26f4bd6c5fcfa24ca7dd9fdb4517946`
 
@@ -137,7 +137,7 @@ SHA-256: `cb14714b25299edc449d64a5742ec49ea26f4bd6c5fcfa24ca7dd9fdb4517946`
 <br/>
 
 ## Version 2.73 (2022-07-11)
-### Download link to be added
+### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-5X%20Pro/Release/rt5x_273.zip)
 CRC-32: `4058B3C4`  
 SHA-256: `a192d4adafa63eb966192e91178f45a972285d2ace16ccbc151b93e069f4c2d1`
 
@@ -148,7 +148,7 @@ SHA-256: `a192d4adafa63eb966192e91178f45a972285d2ace16ccbc151b93e069f4c2d1`
 <br/>
 
 ## Version 2.71 (2022-04-19)
-### Download link to be added
+### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-5X%20Pro/Release/rt5x_271.zip)
 CRC-32: `24B8C06E`  
 SHA-256: `82d6ba26ff51805f9e5cd088fda1181724972e00a8c2f87a6c678ccd03697796`
 
@@ -175,7 +175,7 @@ SHA-256: `82d6ba26ff51805f9e5cd088fda1181724972e00a8c2f87a6c678ccd03697796`
 <br/>
 
 ## Version 2.39 - Special Holiday Edition! (2021-12-21)
-### Download link to be added
+### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-5X%20Pro/Release/rt5x_239.zip)
 CRC-32: `B5199BCB`  
 SHA-256: `b853d4fdd218dc2e92023c88c7a7349a2917be28378b7e7175b61fbb4598a5c7`
 
@@ -206,7 +206,7 @@ Quick notes:
 <p style="margin:20px;"></p>
 
 ## Version 1.999 (2021-11-05)
-### Download link to be added
+### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-5X%20Pro/Release/rt5x_1999.zip)
 CRC-32: `D1F670F8`  
 SHA-256: `a4ae1c3892db2344644260d21d4d25fe6c8e91b3dab86a730b39cb7d09dcd1f7`
 
@@ -216,7 +216,7 @@ SHA-256: `a4ae1c3892db2344644260d21d4d25fe6c8e91b3dab86a730b39cb7d09dcd1f7`
 <br/>
 
 ## Version 1.99 (2021-10-11)
-### Download link to be added
+### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-5X%20Pro/Release/rt5x_199.zip)
 CRC-32: `A5A06175`  
 SHA-256: `6e07857a339272cbebff339f3b611adecf3343e0b4b5de45b5088527a48a788e`
 
@@ -227,7 +227,7 @@ SHA-256: `6e07857a339272cbebff339f3b611adecf3343e0b4b5de45b5088527a48a788e`
 <br/>
 
 ## Version 1.98 (2021-10-10)
-### Download link to be added
+### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-5X%20Pro/Release/rt5x_198.zip)
 CRC-32: `71FF2D5A`  
 SHA-256: `cf135d4d9d2ad123325e21b5aacc8cbccb62fbd71960b296c5ae3de028ab6516`
 
@@ -261,7 +261,7 @@ SHA-256: `cf135d4d9d2ad123325e21b5aacc8cbccb62fbd71960b296c5ae3de028ab6516`
 A friendly reminder due to concerns about too many adjustments and settings as improvements/features are implemented: You can always use the RT5X with default settings (1080pFill/Generic) and get an experience that is arguably at least 90% as good if you never want to deal with any of this.
 
 ## Version 1.84 (2021-09-21)
-### Download link to be added
+### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-5X%20Pro/Release/rt5x_184.zip)
 CRC-32: `91787D99`  
 SHA-256: `912442b3f5b16d37157ef7eb294a0e61f2dc1efbd2a217f3aa3ce2fa25570b7f`
 
@@ -280,7 +280,7 @@ SHA-256: `912442b3f5b16d37157ef7eb294a0e61f2dc1efbd2a217f3aa3ce2fa25570b7f`
 <br/>
 
 ## Version 1.77 (2021-09-09)
-### Download link to be added
+### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-5X%20Pro/Release/rt5x_177.zip)
 CRC-32: `0C82C44C`  
 SHA-256: `bdd9b16ed34056d3bc2054b7cc3565af2f19a044bce411e471259f3177f5116c`
 
@@ -297,7 +297,7 @@ SHA-256: `bdd9b16ed34056d3bc2054b7cc3565af2f19a044bce411e471259f3177f5116c`
 Reminder: Both CRT effects and Smoothing filters look best in 'Generic' mode. Optionally set the pre-emphasis filter to -1 for a softer effect.
 
 ## Version 1.74 (2021-09-04)
-### Download link to be added
+### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-5X%20Pro/Release/rt5x_174.zip)
 CRC-32: `09F6E254`  
 SHA-256: `497dffb0a2a8a95c4695686d9ce51108da133bf6d882a42fc6b76329d3ccf1a5`
 
@@ -315,7 +315,7 @@ SHA-256: `497dffb0a2a8a95c4695686d9ce51108da133bf6d882a42fc6b76329d3ccf1a5`
 <br/>
 
 ## Version 1.67 (2021-08-06)
-### Download link to be added
+### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-5X%20Pro/Release/rt5x_167.zip)
 CRC-32: `B9003D1B`  
 SHA-256: `daf1ba02caa4be07d4fb4b1fa063c518e5eb144bfd8e26b23b5afc247467ac2d`
 
@@ -332,7 +332,7 @@ SHA-256: `daf1ba02caa4be07d4fb4b1fa063c518e5eb144bfd8e26b23b5afc247467ac2d`
 <br/>
 
 ## Version 1.55 (2021-07-20)
-### Download link to be added
+### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-5X%20Pro/Release/rt5x_155.zip)
 CRC-32: `FCDA8977`  
 SHA-256: `38cc90fc9cef1f165b4ab87d493fc6aafcbbf2c2db80d58a47bd8998442871dc`
 
@@ -349,7 +349,7 @@ SHA-256: `38cc90fc9cef1f165b4ab87d493fc6aafcbbf2c2db80d58a47bd8998442871dc`
 <br/>
 
 ## Version 1.29 (2021-06-17)
-### Download link to be added
+### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-5X%20Pro/Release/rt5x_129.zip)
 CRC-32: `28213800`  
 SHA-256: `9ab8a0f31ae4b92c93f49c4bb92baf82356d228d7ddfd8f52fbcb65f75677de4`
 
@@ -362,7 +362,7 @@ SHA-256: `9ab8a0f31ae4b92c93f49c4bb92baf82356d228d7ddfd8f52fbcb65f75677de4`
 <br/>
 
 ## Version 1.28 (2021-06-15)
-### Download link to be added
+### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-5X%20Pro/Release/rt5x_128.zip)
 CRC-32: `266BAE8E`  
 SHA-256: `4695f5f000ab5f51075a941bd93e42a821d3e37e236ffc19ae682ef9c612346f`
 
@@ -382,7 +382,7 @@ We can confirm that a PAL GCN with a RGB SCART cable (use one designed for PAL c
 Unfortunately the Carby Component Cable does not work. The HD Retrovision on a PAL GCN also does not work. We do not know if a modded GCN works, but are told that it should.
 
 ## Version 1.24 (2021-06-05)
-### Download link to be added
+### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-5X%20Pro/Release/rt5x_124.zip)
 CRC-32: `7E40CE5C`  
 SHA-256: `524e96a54e3f4d8515d96f5f8a84945d8af53e81c65b908afdc5ccea170a1cd2`
 
@@ -395,7 +395,7 @@ SHA-256: `524e96a54e3f4d8515d96f5f8a84945d8af53e81c65b908afdc5ccea170a1cd2`
 <br/>
 
 ## Version 1.2 (2021-05-26)
-### Download link to be added
+### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-5X%20Pro/Release/rt5x_12.zip)
 CRC-32: `0CA84F49`  
 SHA-256: `2767829a5db937e9c1e713444a24f6f2ae90c358417edd7e7ea4f08b5f8ecbc6`
 
