--- a/5x.md
+++ b/5x.md
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h1 align="center" style="margin-top: 0px;">RetroTINK-5X firmware</h1>
+<h1 align="center" style="margin-top: 0px;">RetroTINK-5X Release Firmware</h1>
 
 <p style="margin:20px;"></p>
 
