--- a/5x.md
+++ b/5x.md
@@ -256,6 +256,8 @@ SHA-256: `cf135d4d9d2ad123325e21b5aacc8cbccb62fbd71960b296c5ae3de028ab6516`
 
 A friendly reminder due to concerns about too many adjustments and settings as improvements/features are implemented: You can always use the RT5X with default settings (1080pFill/Generic) and get an experience that is arguably at least 90% as good if you never want to deal with any of this.
 
+<p style="margin:20px;"></p>
+
 ## Version 1.84 (2021-09-21)
 ### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-5X%20Pro/Release/rt5x_184.zip)
 CRC-32: `91787D99`  
@@ -291,6 +293,8 @@ SHA-256: `bdd9b16ed34056d3bc2054b7cc3565af2f19a044bce411e471259f3177f5116c`
 <p style="margin:20px;"></p>
 
 Reminder: Both CRT effects and Smoothing filters look best in 'Generic' mode. Optionally set the pre-emphasis filter to -1 for a softer effect.
+
+<p style="margin:20px;"></p>
 
 ## Version 1.74 (2021-09-04)
 ### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-5X%20Pro/Release/rt5x_174.zip)
@@ -376,6 +380,8 @@ Grumpy disclaimer time! It's up to you to get GBI and 360p output from your Game
 We can confirm that a PAL GCN with a RGB SCART cable (use one designed for PAL consoles NOT NTSC) works as well as the official OEM component cables and the Insurrection Industries Carby with an external HDMI -> YPbPr converter box. The RGB approach seems to have some image quality issues, though, so we'd recommend a solution that uses the GC's digital AV port.
 
 Unfortunately the Carby Component Cable does not work. The HD Retrovision on a PAL GCN also does not work. We do not know if a modded GCN works, but are told that it should.
+
+<p style="margin:20px;"></p>
 
 ## Version 1.24 (2021-06-05)
 ### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-5X%20Pro/Release/rt5x_124.zip)
