more header spacing

--- a/5x.md
+++ b/5x.md
@@ -16,7 +16,7 @@ layout: default
 
 ## Notice: Firmware updates erase saved profiles and reset the device to default settings.
 
-<p style="margin:\30px;"></p>
+<p style="margin:20px;"></p>
 
 ## Instructions️
 
