--- a/5x.md
+++ b/5x.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: RetroTINK Firmware Repository - RetroTINK-5X Release Firmware
+title: RetroTINK-5X Release Firmware
 ---
 
 <h1 align="center" style="margin-top: 0px;">RetroTINK-5X Release Firmware</h1>
