--- a/4k.md
+++ b/4k.md
@@ -33,7 +33,7 @@ All custom profiles, CSC files, banner images, input modes, mask overlays and mo
 
 <p style="margin:41px;"></p>
 
-## Version 69.420.69420.42069.8008135 (TEST, NOT AN UPDATE) (2069-04-20) 
+## Version 69.420.69420.42069.8008135.1 (TEST, NOT AN UPDATE) (2069-04-20) 
  
 ### [Download](https://www.youtube.com/watch?v=dQw4w9WgXcQ) 
 CRC-32: `DEADBEEF`   
