fixes to version comparison, update to requirements, test

--- a/5x.md
+++ b/5x.md
@@ -48,6 +48,16 @@ Big thanks to [RetroRGB](https://www.retrorgb.com/how-to-update-your-retrotinks-
 
 <br/>
 
+## Version 3.71.1 (NOT AN UPDATE, JUST A TEST) (2024-01-19)
+### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-5X%20Pro/Release/rt5x_371.zip)
+CRC-32: `1E42A5D4`  
+SHA-256: `aa70d0414589040ceac9eac4f6a5a59936a38abff39cca01f3b153cc0402bd80`
+
+### Changelog:
+- DRAM controller bug fixed that glitched high resolution sources.
+
+<br/>
+
 ## Version 3.71 (2023-10-09)
 ### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-5X%20Pro/Release/rt5x_371.zip)
 CRC-32: `1E42A5D4`  
