--- a/5x.md
+++ b/5x.md
@@ -343,7 +343,7 @@ SHA-256: `38cc90fc9cef1f165b4ab87d493fc6aafcbbf2c2db80d58a47bd8998442871dc`
 
 ### Changelog:
 - Some optimal modes are capable of outputting "444" chroma sampling (thanks to Extrems for the idea):
-<p style="text-align:center;"><img src="/assets/changelogs/5x_155_444.png" alt="RT5X 444-capable modes chart">
+<p style="text-align:center;"><img src="/assets/changelogs/5x_155_444.png" alt="RT5X 444-capable modes chart"></p>
 - Note: Generic modes are unaffected either way since they do not contain sharp color transitions.
 - Added LCD overlay effect to the "Scanline" menu. For this to work:
   - The H. Sampling must be in an optimal mode.
