--- a/4k.md
+++ b/4k.md
@@ -33,6 +33,22 @@ All custom profiles, CSC files, banner images, input modes, mask overlays and mo
 
 <p style="margin:41px;"></p>
 
+## Version 1.2.1 (2024-02-02)
+
+### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-4K/Experimental/rt4k_121.zip)
+CRC-32: `2A552631`  
+SHA-256: `63ab8f92aee6689733711a7547bbeb1cbde1e6a5e256174cb814851960220cba`
+
+### Changelog:
+- Added special Sega Saturn auto-sampling support.
+- Complete rewrite of the auto-sampling/auto-phase algorithm for improved stability for all systems.
+- Complete rewrite of the inverse 3:2 and 2:2 telecine deinterlacers for improved stability and response time. Games that have moderate pace changes such as FFX should now be playable.
+- Added the ability to generate pseudo-interlaced scanline (i.e. 480i style scanlines from 480p inputs, 1080i style scanlines from 1080p inputs).
+- Improved Analogue DAC support including auto-calculating the decimation factor
+- Fixed various HDMI audio compatibility issues including audio glitches for Atomos recorders and missing HDR infoframes when run through AVRs.
+
+<br/>
+
 ## Version 1.1.0 (2024-01-10)
 
 ### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-4K/Release/rt4k_110.zip)
