--- a/4k.md
+++ b/4k.md
@@ -33,6 +33,27 @@ All custom profiles, CSC files, banner images, input modes, mask overlays and mo
 
 <p style="margin:41px;"></p>
 
+## Version 1.3.4 (2024-03-15)
+
+### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-4K/Experimental/rt4k_134.zip)
+CRC-32: `8ED35E79`  
+SHA-256: `e07f92bcbe02cde0769add99b18b59d7acc4d74c1f9b712d0460bf31aae0d3f4`
+
+### Changelog:
+- Added XBR Smoothing
+- Added Enhanced S-video
+- Improved chroma response/sharpness for regular S-video
+- Added 3D Comb filter for NTSC composite video
+- Improved PAL composite and S-video
+- Improved ability to track and hold poor VHS signals
+- Improved MiSTer DV/Analogue decimation detection
+- Minimized glitching during horizontal resolution changes
+- Added option to blank video during major resolution chanes to minimize visual glitches
+- Improved S/PDIF detection
+- Various bug fixes
+
+<br/>
+
 ## Version 1.2.1 (2024-02-02)
 
 ### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-4K/Experimental/rt4k_121.zip)
