--- a/4k.md
+++ b/4k.md
@@ -40,7 +40,19 @@ CRC-32: `073ADD6A`
 SHA-256: `e1b66723e16e8260a6162dafe794dce531ef23f756c174220d5605a803ce238c`
 
 ### Changelog:
-- File selection box remembers previous sub-directory and cursor position when re-opened
+- Improved RGBHV mode detection
+- Improved Gen Lock capture range
+- Improved detection of 1080p YPbPr sources
+- Fixed default trims for 720p, 1080i and 1080p analog sources
+- Fixed various issues causing random glitching of HDMI output pixel order
+- Added ability to pass-through HDR10 and HLG content from HDMI sources
+- Added ability to auto-load DV1 profiles based on reported core name
+- Added ability to alpha key masks to specify direct draw of mask color without blending
+- Added ability to produce interlaced outputs (e.g., 480i, 1080i)
+- Low resolution OSD rendering support to display menu when output modeline is 240p or 480i
+- Fixed minor issues with analog LPF for RGBHV sources
+- File selection menu remembers the sub-directory and cursor position when called again
+
 
 <br/>
 
