--- a/4k.md
+++ b/4k.md
@@ -51,7 +51,7 @@ SHA-256: `5fe54ce60692cdea1168623c3df961dc716c4dc0c9521854bc424871dc8ec324`
 - Added ability to produce interlaced outputs (e.g., 480i, 1080i)
 - Low resolution OSD rendering support to display menu when output modeline is 240p or 480i
 - Fixed minor issues with analog LPF for RGBHV sources
-- File selection menu remembers the sub-directory and cursor position when called again
+- File selection menu remembers the sub-directory and cursor position when recalled again
 
 
 <br/>
