Added 1.6.0 reset button disclaimer

--- a/4k.md
+++ b/4k.md
@@ -25,7 +25,7 @@ title: RetroTINK-4K Release Firmware
 5. Remove the SD card and insert it into the SD card slot on the RetroTINK-4K.
 6. There are two methods for initiating the firmware installation. The RT4K installs firmware based on the "rt4kup.bin" file.
   - Option 1: Power on the RetroTINK-4K, then go to Advanced Settings > OSD/Firmware. In the Firmware update section, select "Check SD Card" to scan for the firmware file, then confirm that you want to install it.
-  - Option 2: Hold down the blue Reset button on the back of the RetroTINK-4K, then power it on. The firmware installation will begin automatically.
+  - Option 2: Hold down the blue Reset button on the back of the RetroTINK-4K, then power it on. The firmware installation will begin automatically. **NOTE: As of experimental firmware 1.6.0, if you wish to use the reset button method, you must unplug the RT4K from power, hold the reset button, and plug the power back in.**
   - If the LED blinks red, an install error has occurred. Check the files on the SD card and try again.
 7. The RT4K will reboot for about 40 seconds, with the front LED flashing pink and then blue. Once done, it will power on again as normal with a green LED. You're done!
 
