--- a/4k.md
+++ b/4k.md
@@ -33,6 +33,27 @@ All custom profiles, CSC files, banner images, input modes, mask overlays and mo
 
 <p style="margin:41px;"></p>
 
+
+## Version 1.6.9 (2024-11-24)
+
+### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-4K/Experimental/rt4k_169.zip)
+CRC-32: `875D4727`  
+SHA-256: `6c1f7bfda5075cbada34edec0b02d17d6c7030642cbc97fadf42da329b722051`
+
+### Changelog:
+- Added interlaced support for RGBHV sources
+- Added auto-sleep timer support (in OSD/Firmware menu, global setting saved indepedent of profile)
+- Improved auto-phase algorithm that rejects the phase with ringing artifacts in favor of a phase with maximum flatness for both on-demand and continuous modes
+- Added support for serial communications over HD15 and USB (virtual serial ports)
+- Added commands for SVS switch profile auto-loading on new input
+- Added commands to simulate remote control actions over serial port
+- Fixed issues that caused glitches with S/PDIF audio inputs
+- Fixed edge cases related to 240p/480i mode detection 
+- Fixed issue that result in cut off pixels in 640x480 PC mnodes
+
+<br/>
+
+
 ## Version 1.5.4 (2024-07-21)
 
 ### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-4K/Experimental/rt4k_154d.zip)
