--- a/4k.md
+++ b/4k.md
@@ -49,7 +49,7 @@ SHA-256: `6c1f7bfda5075cbada34edec0b02d17d6c7030642cbc97fadf42da329b722051`
 - Added commands to simulate remote control actions over serial port
 - Fixed issues that caused glitches with S/PDIF audio inputs
 - Fixed edge cases related to 240p/480i mode detection 
-- Fixed issue that result in cut off pixels in 640x480 PC mnodes
+- Fixed issue that result in cut off pixels in 640x480 PC modes
 
 <br/>
 
