--- a/4k.md
+++ b/4k.md
@@ -34,6 +34,25 @@ All custom profiles, CSC files, banner images, input modes, mask overlays and mo
 <p style="margin:41px;"></p>
 
 
+## Version 1.9.6 (2025-11-04)
+
+### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-4K/Experimental/rt4k_196.zip)
+CRC-32: `62E848CB`  
+SHA-256: `20d244a0bba4ee630afa2cf2bc4c946af8ef7637e8d69d723d6b42c4d0ab94b1`
+
+### Changelog:
+- Added "Smooth I/P" to enable nearly seamless and glitch free 240p <-> 480i transistions
+- Added "TBC" to the list of sync options: similar to Gen-Lock but with additional filtering and slower convergence
+- Added "Adaptive Triple Buffer" that switches to a buffered 50 Hz mode when the source switches from ~60 Hz to ~50 Hz
+- Added "Target Decimate" to the HDMI Input menu for Analogue and MiSTer use to keep the output pixels within a certain range for CRT effects
+- Added 192 kHz the the list of possible audio ADC sample rates
+- Added a VU meter to the Audio menu to help calibrate audio sources and avoid clipping
+- Added CRT beam simulation to the BFI modes to generate a rolling BFI with control of "phospher" glow and steepness
+- Many thanks to the community for the updated profiles! Check the folders for detailed notes
+
+<br/>
+
+
 ## Version 1.6.9 (2024-11-24)
 
 ### [Download](https://cdn.jsdelivr.net/gh/retrotink-llc/firmware@main/RetroTINK-4K/Experimental/rt4k_169.zip)
